Fix invisible texts on dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -215,11 +215,22 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
-
 .slider.round {
   border-radius: 34px;
 }
 
 .slider.round:before {
   border-radius: 50%;
+}
+
+.dark .modal-title {
+  color: black;
+}
+
+.dark .bg-white {
+  background-color: #333 !important
+}
+
+.dark .form-group {
+  color: black
 }
